cleaning bad fonts (still need to fix PJ_Hiragana with fontforge), getting basic QCM Hiragana working, some double entries for some reasons

--- a/Resources/fonts.qrc
+++ b/Resources/fonts.qrc
@@ -1,7 +1,6 @@
 <RCC>
-    <qresource prefix="/fonts">
-        <file>fonts/hiragana_tfb.ttf</file>
-        <file>fonts/HIRAGANA.ttf</file>
-        <file>fonts/Hiragana_Script.ttf</file>
+    <qresource prefix="/">
+        <file>fonts/PJ_Hiragana.ttf</file>
+        <file>fonts/DotGothic16-Regular.ttf</file>
     </qresource>
 </RCC>
