--- a/fntsetting.ui
+++ b/fntsetting.ui
@@ -85,10 +85,13 @@
        <item>
         <widget class="QSlider" name="HiraganaSizeSlider">
          <property name="minimum">
-          <number>9</number>
+          <number>20</number>
          </property>
          <property name="maximum">
-          <number>40</number>
+          <number>80</number>
+         </property>
+         <property name="value">
+          <number>20</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -186,10 +189,13 @@
        <item>
         <widget class="QSlider" name="KatakanaSizeSlider">
          <property name="minimum">
-          <number>9</number>
+          <number>20</number>
          </property>
          <property name="maximum">
-          <number>40</number>
+          <number>80</number>
+         </property>
+         <property name="value">
+          <number>20</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -287,10 +293,13 @@
        <item>
         <widget class="QSlider" name="RomanjiSizeSlider">
          <property name="minimum">
-          <number>9</number>
+          <number>20</number>
          </property>
          <property name="maximum">
-          <number>40</number>
+          <number>80</number>
+         </property>
+         <property name="value">
+          <number>20</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
