--- a/appsettings.ui
+++ b/appsettings.ui
@@ -15,11 +15,107 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLabel" name="placeholder">
-     <property name="text">
-      <string>AppSettingsPage placeholder</string>
+    <layout class="QVBoxLayout" name="QcmSettings">
+     <property name="topMargin">
+      <number>0</number>
      </property>
-    </widget>
+     <property name="bottomMargin">
+      <number>20</number>
+     </property>
+     <item>
+      <widget class="Line" name="line">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="EntriesLineSetting">
+       <item>
+        <widget class="QLabel" name="lineSettingLabel">
+         <property name="text">
+          <string>QCM configuration : </string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="LineSettingDropdown"/>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="RandomnessSetting">
+       <item>
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Randomness Type : (TODO)</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="comboBox"/>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="StatsSetting">
+       <item>
+        <layout class="QVBoxLayout" name="StatSettingSubContainer">
+         <item>
+          <widget class="Line" name="StatsLine">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="ScoreLayout">
+           <item>
+            <widget class="QLabel" name="ScoreCounterLabel">
+             <property name="text">
+              <string>Score : </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="ScoreCounterValueLabel">
+             <property name="text">
+              <string>0</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="ErrorsLayout">
+           <item>
+            <widget class="QLabel" name="ErrorCounterLabel">
+             <property name="text">
+              <string>Errors : </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="ErrorsCounterValueLabel">
+             <property name="text">
+              <string>0</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="QPushButton" name="ResetStatsButton">
+           <property name="text">
+            <string>Reset Stats</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
