--- a/symbolsetting.ui
+++ b/symbolsetting.ui
@@ -13,7 +13,11 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout"/>
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
+    <layout class="QVBoxLayout" name="SymbolSettingContainer"/>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
