--- a/symbolsettingsection.ui
+++ b/symbolsettingsection.ui
@@ -14,6 +14,21 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
@@ -36,6 +51,9 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="SymbolSettingNameContainer">
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <item>
       <widget class="QLabel" name="SymbolSettingSectionName">
        <property name="text">
@@ -66,7 +84,14 @@
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" name="SymbolSettingSectionEntries"/>
+    <layout class="QGridLayout" name="SymbolSettingSectionEntries">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetDefaultConstraint</enum>
+     </property>
+     <property name="spacing">
+      <number>0</number>
+     </property>
+    </layout>
    </item>
    <item>
     <spacer name="verticalSpacer_2">
