made symbolSettingEntries chekable and removed QPalette, don't need them anymore, bye bye

--- a/qcmentryguess.ui
+++ b/qcmentryguess.ui
@@ -32,6 +32,9 @@
        <property name="text">
         <string>あああaaa</string>
        </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
     </layout>
