--- a/symbolsettingentry.ui
+++ b/symbolsettingentry.ui
@@ -27,6 +27,9 @@
        <property name="text">
         <string>azerty</string>
        </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
     </layout>
